--- a/Chat_Application_Clients.csproj
+++ b/Chat_Application_Clients.csproj
@@ -9,10 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.Data" Version="21.1.6" />
+    <PackageReference Include="devexpress.wpf.core" Version="21.1.5" />
     <PackageReference Include="DevExpress.Xpo" Version="19.2.6" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="NetMQ" Version="4.0.1.6" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
   <ItemGroup>
