--- a/Chat_Application_Clients.csproj
+++ b/Chat_Application_Clients.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="DevExpress.Xpo" Version="19.2.6" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.WindowsAPICodePack-Shell" Version="1.1.0" />
     <PackageReference Include="NetMQ" Version="4.0.1.6" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
